05_signal : input.c, main.c에 signal handler(for SIDSEFV, SIGCHLD 제작)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
         "unistd.h": "c",
         "prctl.h": "c",
         "system_server.h": "c",
-        "web_server.h": "c"
+        "web_server.h": "c",
+        "wait.h": "c",
+        "gui.h": "c"
     }
 }
