07_thread : system/system_server.c, ui/inpt.c에각각 4개, 2개 thread 생성 추가

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,8 @@
         "sigevent-consts.h": "c",
         "time_t.h": "c",
         "timesize.h": "c",
-        "signal.h": "c"
+        "signal.h": "c",
+        "assert.h": "c",
+        "execinfo.h": "c"
     }
 }
