10_pipe : popen()사용하여 df 결과 출력(in system/system_serevr.c)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "timesize.h": "c",
         "signal.h": "c",
         "assert.h": "c",
-        "execinfo.h": "c"
+        "execinfo.h": "c",
+        "stdio.h": "c"
     }
 }
