13_systemV shm : shm / mqueue를 사용한 sensor_thread -> monitor_thread 간의 IPC 구현

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,8 @@
         "signal.h": "c",
         "assert.h": "c",
         "execinfo.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "toy_message.h": "c",
+        "shared_memory.h": "c"
     }
 }
