15_file syscall : dir syscall 사용하여 dir 용량 출력 기능 구현(system.c)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,11 @@
         "mman.h": "c",
         "semaphore.h": "c",
         "currtime.h": "c",
-        "stat.h": "c"
+        "stat.h": "c",
+        "mqueue.h": "c",
+        "limits.h": "c",
+        "*.tcc": "c",
+        "functional": "c",
+        "istream": "c"
     }
 }
